...
					android:layout_width="0dp"
					android:layout_weight="1"
					android:layout_height="wrap_content"
					android:orientation="horizontal">
					
					<TextView
						android:id="@+id/message"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="10dp"
						android:text=""
						android:maxLines="100"
						android:textColor="#000000" />
...
								android:padding="1dp">
						
						<HorizontalScrollView android:id="@+id/console_scroller_x"
											  android:layout_width="match_parent"
											  android:layout_height="wrap_content">
							
							<TextView android:id="@+id/console"
									  android:layout_width="wrap_content"
									  android:layout_height="wrap_content"
									  android:padding="9dp"
									  android:textColor="#FFFFFF"
									  android:textIsSelectable="true"
									  android:textSize="14sp"
...
